5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1590_1016.log
== TEST (2019-03-29 15:09:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float("a "))
b = input(float("b "))
c = input(float("c "))

s = a + b + c / 2
A = sqrt((s - a)(s - b)(s - c) s)

print(A)
-- ERROR:
File "XXXX", line 12
    A = sqrt((s - a)(s - b)(s - c) s)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:12:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float("a "))
b = input(float("b "))
c = input(float("c "))

s = a + b + c / 2
t = (s - a)(s - b)(s - c) s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
File "XXXX", line 12
    t = (s - a)(s - b)(s - c) s
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:12:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float("a "))
b = input(float("b "))
c = input(float("c "))

s = a + b + c / 2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = input(float("a "))
ValueError: could not convert string to float: 'a '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:13:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float("valor x "))
b = input(float("valor y "))
c = input(float("valor z "))

s = a + b + c / 2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = input(float("valor x "))
ValueError: could not convert string to float: 'valor x '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:14:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float(" "))
b = input(float(" "))
c = input(float(" "))

s = a + b + c / 2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = input(float(" "))
ValueError: could not convert string to float:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:14:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float( ))
b = input(float( ))
c = input(float( ))

s = a + b + c / 2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s = a + b + c / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:15:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float("number: "))
b = input(float("number: " ))
c = input(float("number: " ))

s = a + b + c / 2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = input(float("number: "))
ValueError: could not convert string to float: 'number: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:16:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float("number: "))
b = input(float("number: " ))
c = input(float("number: " ))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = input(float("number: "))
ValueError: could not convert string to float: 'number: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:17:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = input(float("number "))
b = input(float("number " ))
c = input(float("number " ))

S = a + b + c
s = S/2
t = (S - a)*(S - b)*(S - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = input(float("number "))
ValueError: could not convert string to float: 'number '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:19:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number " ))
c = float(input("number " ))

S = a + b + c
s = S/2
t = (S - a)*(S - b)*(S - c)*s
A = sqrt(t)

round(print(A), 5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    round(print(A), 5)
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:20:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number " ))
c = float(input("number " ))

S = a + b + c
s = S/2
t = (S - a)*(S - b)*(S - c)*s
A = sqrt(t)

print(round(A), 5)
-- OUTPUT:
726 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:21:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number " ))
c = float(input("number " ))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

print(round(A), 5)
-- OUTPUT:
69 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:23:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number "))
c = float(input("number "))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

print(round(A), 5)
-- OUTPUT:
69 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:23:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number "))
c = float(input("number "))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

print(round(A), 5)
-- EXECUTION TIME:
0.119342
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69 5
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600 5
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709 5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:25:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number "))
c = float(input("number "))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

print(A)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:26:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number "))
c = float(input("number "))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

print(round(A, 5)
-- EXECUTION TIME:
0.219259
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 17
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:26:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number "))
c = float(input("number "))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

print(round(A, 5)
-- ERROR:
File "XXXX", line 17
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:26:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

a = float(input("number "))
b = float(input("number "))
c = float(input("number "))

S = a + b + c
s = S/2
t = (s - a)*(s - b)*(s - c)*s
A = sqrt(t)

print(round(A, 5))
-- EXECUTION TIME:
0.196737
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
